[package]
name = "us_time_parser"
version = "0.1.0"
description = "A Rust utility for parsing and validating time components using pest and clap crates."
edition = "2021"
license = "MIT" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "2.33.3"
pest = "2.7.5"
pest_derive = "2.7.5"